TO DO :
Add : MultiContent PKGDIR/PS3_GMXX/PK3_EXTRA/INSDIR

v1.40
Fix : IRD build of backups with PKGDIR.
Fix : Shortcut pkg.
Add : Scans sub-folders to find backups.
Add : Support fw 4.88C.
Add : Updated mamba v8.40 from https://github.com/aldostools/Mamba June 06, 2021.

v1.39
Fix : Display issue with game title containing new line character '\n'.
Fix : No more freeze when the firmware is unknown/new. I'm not sure how I fixed it tho.
Fix : XMB UI won't display 'adjust your filters' on boot of MGZ if you unchecked 'PS3' filter.
Add : Support new/different PS2 CONFIG from /dev_hdd0/game/PS2CONFIG. They are displayed with the prefix '[DB]'.
Add : IRD check is more accurate. See notes (3)
Add : Updated mamba to 8.3 from https://github.com/aldostools/Mamba
Add : OffsetFinder support every symbols/hash needed to build cobra & mamba 8.3
Add : Support exFAT. See notes (2).
Add : Support HEN & CFW 4.87C.
Add : Logs option. It saves loading logs at "/dev_hdd0/tmp/mgz.log".
Add : Debug option. It slows the messages displayed on screen during loadings.
Add : multiMAN payload is now firmware independent.
Add : New CUSTOM PS2 CONFIG files from webMAN MOD by aldostools December 14, 2020. Special thanks to kozarovv.
Add : New ps2 widescreen pnatchs from pcsx2.net forum January 13, 2021.
Add : Reset position of filter box.
Add : Reworked the game updates manager.
Add : dev_bdvd is displayed.
Add BDVD option : Dump encrypted Blu-Ray disc.
Add BDVD option : Dump disc key.
Add BDVD option : Dump decrypted Blu-Ray disc with its IRD. See notes (1).
Add BDVD option : Copy, it will copy the content of the BR to a directory.
Add BDVD option : Properties, same as JB backup.
Add Settings/System tools : Dump eid_root_key, 3Dump.bin, lv1, lv2 and fix permission for dev_hdd0.
Add FileManager : Convert any supported picture to PNG.
Add FileManager : It won't show dev_blind and dev_rebug anymore, instead it will display a protected/unprotect dev_flash with a lock icon.